# Adaptive-E-Learning-Platform-Bakend

./: .env.example  .gitignore  DB_schema_script.sql  README.md  main.py  pyproject.toml
app/: constants.py
app/auth/: dependencies.py  google_auth.py  utils.py
app/cache/: learning_profile.py  metadata.py  models.py  redis.py
app/database/: auth_queries.py  book_queries.py  connection.py  learning_profile_queries.py  library_queries.py  mcq_queries.py  model_queries.py  notes_queries.py  slides_queries.py  slides_query.py  streaks.py  study_mode_queries.py
app/routes/: auth.py  constants.py  diagrams.py  file.py  game.py  learning_profile.py  library_search.py  models.py  quiz_gen.py  streaks.py  study_mode.py  transcribe.py
app/schemas/: book.py  chat.py  diagrams.py  document_progress.py  flashcard.py  game.py  learning_profile.py  learning_profile_form.py  library_search.py  models.py  quiz.py
app/services/: audio_transcribe.py  book_processor.py  book_upload.py  cache.py  chunking.py  constants.py  delete.py  delete_file.py  delete_service.py  diagram_generator.py  downloadfile.py  embeddings.py  extraction.py  flashcard_generator.py  game_generator.py  llms.py  mcq_generator.py  mcq_main.py  metadata_utils.py  minio_client.py  models.py  notes_upload.py  pdf_converter.py  pptx_to_pdf.py  presentation_upload.py  profile_desc_generator.py  prompts.py  query_processing.py  quiz_generator.py  rag_service.py  redis_client.py  study_mode.py  textbook_processor.py  utils.py  vector_search.py  vector_storage.py  vectorstorage.py  (+1 more)
scripts/: init_db.py
